<resources>
    <string name="app_name">TourGuide</string>
    <string name="drawer_title">Explore Cairo</string>
    <string name="drawer_touristic_places">Touristic Places</string>
    <string name="drawer_restaurants">Restaurants</string>
    <string name="drawer_hotels">Hotels</string>
    <string name="drawer_services">Services</string>
    <string name="page_title">Home</string>
    <string name="welcome_to_egypt">Welcome to Egypt!</string>

    <string name="islamic_places">Islamic places</string>
    <string name="pharaonic_places">Pharaonic places</string>
    <string name="name">Kebdet El Prince</string>
    <string name="details">79 Talaat Harb St (Madinat Al O\'mal) Embaba</string>
    <string name="name_small_card">Amr bin Al Aas</string>
    <string name="places_title">Places</string>
    <string name="rests_title">Restaurants</string>
    <string name="hotels_title">Hotels</string>
    <string name="services_title">Services</string>
    <string name="market_tab">Super Markets</string>
    <string name="gas_tab">Gas Stations</string>
    <string name="market_1">Carrefour</string>
    <string name="market_2">Metro</string>
    <string name="market_3">Ragab Sons</string>
    <string name="market_4">Seoudi</string>
    <string name="market_1_add">El-Nasr Rd, Sheraton Al Matar</string>
    <string name="market_2_add">Ammar Ibn Yasser, Al Matar, Qesm an Nuzhah</string>
    <string name="market_3_add">8 Fareed Semeika, Al Matar, El Nozha</string>
    <string name="market_4_add">13 Khaled Ibn Al Walid, Sheraton Al Matar, El Nozha</string>
    <string name="gas_1">Mobil</string>
    <string name="gas_2">Total</string>
    <string name="gas_3">Shell</string>
    <string name="gas_1_add">46 El Hegaz St, El-Nozha</string>
    <string name="gas_2_add">EL-NASR RD، Airport Road) Beside Oasis، Sheraton Al Matar, El Nozha</string>
    <string name="gas_3_add">6 El Nozha St</string>
    <string name="rest_1">Kebdet El Prince</string>
    <string name="rest_2">Ezz ElMnofy</string>
    <string name="rest_3">Al Refaai</string>
    <string name="rest_4">Bahha</string>
    <string name="rest_5">Sobhy Kaber</string>
    <string name="rest_1_add">79 Talaat Harb St (Madinat Al O\'mal) Embaba</string>
    <string name="rest_2_add">19 Gameat Al Dewal Al Arabeya St Mohandesin</string>
    <string name="rest_4_add">El-Nasereya As Sebaeyin El-Sayeda Zainab</string>
    <string name="rest_3_add">4 Mang St in front of Masjed Al Sayeda Zainab</string>
    <string name="rest_5_add">151 Ebied St Al Sahel</string>
    <string name="islamic_tab">Islamic</string>
    <string name="pharaonic_tab">Pharaonic</string>
    <string name="phar_1">Pyramids</string>
    <string name="phar_2">Abu Simbel     Temple</string>
    <string name="phar_3">Hatshepsut     Temple</string>
    <string name="phar_4">Luxor Temple</string>
    <string name="phar_5">Philae Temple</string>
    <string name="islam_1">Masjed Amr bin Al Aas</string>
    <string name="islam_2">Bayt Al Suhimi</string>
    <string name="islam_3">Moez Street</string>
    <string name="islam_4">Masjed Mohamed     Ali</string>
    <string name="islam_5">Masjed Sultan Hassan</string>
</resources>
